
[tool.poetry]
name = "pygess-py"
version = "2.0.2"
description = "Pygame Essentials"
authors = ["Abhijay 'CraftyRyte' Bidari <craftyryte2011@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "pygess" }
]

[tool.poetry.dependencies]
python = "^3.12"
pygame-ce = "2.5.1"
uuid = "^1.30"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
